# meli-forecast

./: .gitignore  README.md  databricks.yml  pyproject.toml  submission.csv
.github/workflows/: onpr.yml  onrelease.yml
conf/: dev_config.yml  prod_config.yml  staging_config.yml
data/: geo.csv
docs/: diagrams.drawio
meli_forecast/: evaluation.py  model.py  params.py  schemas.py  utils.py
meli_forecast/tasks/: create_database.py  create_tables.py  evaluation.py  ingestion.py  input.py  model.py  output.py  split.py
notebooks/: eda.ipynb  forecast_workflow.ipynb  sample_notebook.py
tests/: utils.py
tests/unit/: conftest.py  test_evaluation.py  test_model.py  test_split.py  test_utils.py
tests/unit/tasks/: test_create_database.py  test_evaluation.py  test_ingestion.py  test_input.py  test_model.py  test_output.py  test_split.py
