[tool.poetry]
name = "meli-forecast"
version = "0.1.0"
description = ""
authors = ["Diego Alberto Garrido Amaya <diego.garrido.6568@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pyyaml = "*"
darts = "^0.30.0"
prophet = "^1.1.5"
pydantic = "^2.7.2"

[tool.poetry.group.dev.dependencies]
pyspark = "3.5.0"
delta-spark = "3.2.0"
pyarrow = ">=8.0.0"
pandas = ">=1.5.3,<2"
mlflow = {extras = ["databricks"], version = "2.11.3"}
mlflow-skinny = {extras = ["databricks"], version = "2.11.3"}
mypy = "^1.10.1"
pyright = "^1.1.370"
ruff = "^0.5.1"
pre-commit = "^3.7.1"
jupyterlab = "^4.2.4"
ipywidgets = "^8.1.3"
ydata-profiling = "^4.9.0"
numba = "<0.59.0"
visions = "<0.7.6"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"
coverage = "^7.5.4"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
create_database = "meli_forecast.tasks.create_database:entrypoint"
create_tables = "meli_forecast.tasks.create_tables:entrypoint"
ingestion = "meli_forecast.tasks.ingestion:entrypoint"
input = "meli_forecast.tasks.input:entrypoint"
split = "meli_forecast.tasks.split:entrypoint"
model = "meli_forecast.tasks.model:entrypoint"
evaluation = "meli_forecast.tasks.evaluation:entrypoint"
output = "meli_forecast.tasks.output:entrypoint"

[tool.ruff]
line-length = 79
select =[
  "E", # pycodestyle errors
  "W", # pycodestyle warnings
  "F", # pyflakes
  "I", # isort
  "C", # flake8-comprehensions
  "S", # flake8-bandit
]
ignore = [
  "E501", # line-too-long, handled by black
  "S101", # use assert
]
